--- a/resources/assets/sass/general.scss
+++ b/resources/assets/sass/general.scss
@@ -6,10 +6,8 @@ body, html {
 ::-moz-selection{background:#ee9209;color:white}
 ::selection{background:#ee9209;color:white}
 
+
 .intro-header {
-	@include respond-below(sm) {
-		display: none;
-	}
 	background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
 	color: #fff;
 	float: left;
